--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -16,7 +16,7 @@
   }
 
   body {
-    font-size: $base * 0.9;
+    font-size: $base * 1;
     line-height: 1.5;
     font-family: 'Open Sans', sans-serif;
     color: $white;
@@ -107,7 +107,7 @@
         position: absolute;
         top: -100px;
         right: -28px;
-        z-index: 9999;
+        z-index: 99;
 
       }
 
